Add DTO Records